--- a/static/global.css
+++ b/static/global.css
@@ -3,16 +3,18 @@ body {
     font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-size: 14px;
     line-height: 1.5;
-    color: #333;
+    color: var(--dark-text);
     overflow-x: hidden;
 }
 
 :root {
-    --dark-background: #374b5d;
+    /* --dark-background: #374b5d; */
+    --dark-background: #333333;
     --white-background: #ffffff;
     --light-background: #e9eaec;
 
-    --dark-text: #374b5d;
+    --dark-text: #666666;
+    --darker-text: #333333;
     --white-text: #ffffff;
     --light-text: #e9eaec;
 
