--- a/static/global.css
+++ b/static/global.css
@@ -52,6 +52,15 @@ ul {
     padding-left: 0;
 }
 
+.dienst-blok:nth-child(2n) .text-blok::after {
+    /* background: red; */
+    left: 2rem;
+}
+
+.afspraakOnder {
+    z-index: 99;
+}
+
 code {
     font-family: menlo, inconsolata, monospace;
     font-size: calc(1em - 2px);
