--- a/static/global.css
+++ b/static/global.css
@@ -5,7 +5,7 @@ body {
     line-height: 1.5;
     color: var(--dark-text);
     overflow-x: hidden;
-    background: var(--white-background);
+    background: var(--light-background);
 }
 
 :root {
