--- a/static/global.css
+++ b/static/global.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: Lato, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -5,7 +9,7 @@ body {
     line-height: 1.5;
     color: var(--dark-text);
     overflow-x: hidden;
-    background: var(--light-background);
+    background: var(--white-background);
 }
 
 :root {
