--- a/static/global.css
+++ b/static/global.css
@@ -88,6 +88,12 @@ code {
     /* box-shadow: 0px 0px 2px 1px var(--accent-secondary); */
 }
 
+.wide-wrapper {
+    width: 100%;
+    max-width: 1000px;
+    margin: auto;
+}
+
 @media (min-width: 400px) {
     body {
         font-size: 16px;
