--- a/static/global.css
+++ b/static/global.css
@@ -7,8 +7,10 @@ body {
     font-family: Lato, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-size: 14px;
     line-height: 1.5;
+    color: #666666;
     color: var(--dark-text);
     overflow-x: hidden;
+    background:#f8f8f8;
     background: var(--white-background);
 }
 
@@ -69,18 +71,12 @@ ul {
     z-index: 99;
 }
 
-code {
-    font-family: menlo, inconsolata, monospace;
-    font-size: calc(1em - 2px);
-    color: #555;
-    background-color: #f0f0f0;
-    padding: 0.2em 0.4em;
-    border-radius: 2px;
-}
 
 .button-dark {
+    border: 2px solid #333333;
     border: 2px solid var(--dark-background);
     background: none;
+    color: #333333;
     color: var(--darker-text);
     padding: 10px 15px;
     cursor: pointer;
@@ -89,6 +85,7 @@ code {
 }
 
 .button-dark:hover {
+    background: #333333;
     background: var(--dark-background);
     color: var(--white-text);
     /* box-shadow: 0px 0px 2px 1px var(--accent-secondary); */
