--- a/static/global.css
+++ b/static/global.css
@@ -10,7 +10,7 @@ body {
     color: #666666;
     color: var(--dark-text);
     overflow-x: hidden;
-    background:#f8f8f8;
+    background: #f8f8f8;
     background: var(--white-background);
 }
 
@@ -87,6 +87,7 @@ ul {
 .button-dark:hover {
     background: #333333;
     background: var(--dark-background);
+    color: #ffffff;
     color: var(--white-text);
     /* box-shadow: 0px 0px 2px 1px var(--accent-secondary); */
 }
