--- a/static/global.css
+++ b/static/global.css
@@ -41,7 +41,7 @@ html {
 
     --border-radius: 0px;
 
-    --afspraak-height: 30vh;
+    --afspraak-height: 35vh;
 }
 
 h1 {
@@ -61,6 +61,11 @@ a {
     text-decoration: none;
 }
 
+h1,
+h2 {
+    color: #333333;
+    color: var(--darker-text);
+}
 
 em,
 b {
