--- a/static/global.css
+++ b/static/global.css
@@ -3,15 +3,15 @@
 }
 
 @font-face {
-    font-family: "GothicHeader";
-    src: url("./gothic.ttf");
-    src: url("./gothic.woff") format("woff"),
-        url("./gothic.woff2") format("woff2");
+    font-family: 'GothicHeader';
+    src: url('./gothic.ttf');
+    src: url('./gothic.woff') format('woff'), url('./gothic.woff2') format('woff2');
 }
 
 body {
     margin: 0;
-    font-family: Lato, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: Lato, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+        Helvetica Neue, sans-serif;
     font-size: 14px;
     line-height: 1.5;
     color: #666666;
@@ -30,7 +30,7 @@ html {
     --dark-background: #333333;
     --white-background: #f8f8f8;
     --light-background: #e9eaec;
-    --white-background-opaque: #F8F8F833;
+    --white-background-opaque: #f8f8f833;
     --dark-text: #666666;
     --darker-text: #333333;
     --white-text: #ffffff;
@@ -41,7 +41,6 @@ html {
 
     --border-radius: 0px;
     --afspraak-height: 35vh;
-
 }
 
 h1 {
@@ -98,12 +97,9 @@ ul {
     padding-left: 0;
 } */
 
-
-
 .afspraakOnder {
     z-index: 99;
 }
-
 
 .button-dark {
     border: 2px solid #333333;
